demos/onecommute/force-app/main/default/objects/OneCommute_Site__c/OneCommute_Site__c.object-meta.xml
<CustomObject>
    <description>OneCommute demo parent record for a commuter program site or property.</description>
    <label>OneCommute Site</label>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OneCommute Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>