demos/onecommute/force-app/main/default/objects/OneCommute_Site__c/fields/Alt_Mode_Rate__c.field-meta.xml
<CustomField>
    <fullName>Alt_Mode_Rate__c</fullName>
    <label>Alternative Mode Rate</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>