demos/onecommute/force-app/main/default/objects/OneCommute_Site__c/fields/Report_Month__c.field-meta.xml
<CustomField>
    <fullName>Report_Month__c</fullName>
    <label>Report Month</label>
    <length>40</length>
    <type>Text</type>
</CustomField>