demos/onecommute/force-app/main/default/objects/OneCommute_Site__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Program Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>