demos/onecommute/force-app/main/default/objects/OneCommute_Site__c/listViews/Demo_Sites.listView-meta.xml
<ListView>
    <fullName>Demo_Sites</fullName>
    <columns>NAME</columns>
    <columns>Client_Name__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Total_Employees__c</columns>
    <columns>Alt_Mode_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Demo Sites</label>
</ListView>